--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.header {
-  display: fixed;
+header {
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 70px; /* Update height to 70px */
@@ -13,7 +13,6 @@
 
 h1 {
   font-size: 36px;
-  position: fixed;
 }
 
 .button-container {
@@ -25,7 +24,7 @@ h1 {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   width: 100%;
   position: fixed;
-  top: 70px; /* Update top position to 70px + height of first header */
+  top: 70px; /* Update top position to match header height */
   left: 0;
 }
 
@@ -45,68 +44,105 @@ button {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
+#main-container {
+  display: flex;
+  height: calc(100% - 130px);
+  margin-top: 130px;
+}
+
+#sidebar {
+  width: 200px;
+  height: 480px;
+  background-color: #ddd;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
 
 #video-container {
-  display: flex;
-  margin-top: 250px;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  height: calc(100% - 260px); /* Account for the header and button container heights */
+  position: absolute;
+  top: 100px;
+  left: 100px;
 }
 
-.video-pane {
-    width: calc(100% - 50px);
-    height: auto;
-    margin-top: 0;
-    border: 2px solid #ccc;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto;
-    gap: 20px;
+.video-pane1 {
+  position: absolute;
+  top: 100px;
+  left: 350px;
+  width: 300px;
+  height: 200px;
+  background-color: red;
+}
+
+.video-pane2 {
+  position: absolute;
+  position: absolute;
+  top: 100px;
+  left: 800px;
+  width: 300px;
+  height: 200px;
+  background-color: green;
+}
+
+.video-pane3 {
+  position: absolute;
+  top: 350px;
+  left: 350px;
+  width: 300px;
+  height: 200px;
+  background-color: blue;
+}
+
+.video-pane4 {
+  position: absolute;
+  top: 350px;
+  left: 800px;
+  width: 300px;
+  height: 200px;
+  background-color: yellow;
+}
+input[type="text"],
+  button {
+  margin: 5px 0;
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 
   }
-  
-  .box {
-    width: 240px;
-    height: 150px;
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  
-.box1 {
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
-  width: 500px;
-  height: 320px;
-
+  .traffic-light-panel {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin-left: 20px;
 }
 
-.box2 {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
-  width: 500px;
-  height: 320px;
-
+.traffic-light {
+width: 40px;
+height: 80px;
+border: 1px solid black;
+border-radius: 5px;
+background-color: #ddd;
+margin-bottom: 10px;
 }
 
-.box3 {
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
-  width: 500px;
-  height: 320px;
-  
-
+.traffic-light .circle {
+width: 20px;
+height: 20px;
+border-radius: 50%;
+margin: 5px;
 }
 
-.box4 {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-  width: 500px;
-  height: 320px;
+.traffic-light .circle.red {
+background-color: red;
 }
 
-/* .box1, .box2, .box3, .box4 {
+.traffic-light .circle.yellow {
+background-color: yellow;
+}
 
-} */
+.traffic-light .circle.green {
+background-color: green;
+}
