--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ button {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
+
 #main-container {
   display: flex;
   height: calc(100% - 130px);
@@ -76,7 +77,6 @@ button {
 
 .video-pane2 {
   position: absolute;
-  position: absolute;
   top: 100px;
   left: 800px;
   width: 300px;
@@ -101,86 +101,113 @@ button {
   height: 200px;
   background-color: yellow;
 }
+
 input[type="text"],
-  button {
+button {
   margin: 5px 0;
   padding: 10px;
   font-size: 18px;
   border: none;
   border-radius: 5px;
-  box-shadow: 0px 
-  }
-  .traffic-light-panel {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 276px;
-    margin-top: 140px;
-  }
-  .traffic-light-panel2 {
-    position: absolute;
-    margin-top: 170px ;
-    right: 0;
-    transform: translateY(-50%);
-  }
-  .traffic-light-panel3 {
-    position: absolute;
-    margin-top: 170px ;
-    margin-left: 725px;
-    transform: translateY(-50%);
-  }
-  .traffic-light-panel4 {
-    position: absolute;
-    top: 73%;
-    /* margin-bottom: 600px; */
-    margin-left: 725px;
-    transform: translateY(-50%);
-  }
-  
-  .traffic-light {
-    width: 60px;
-    height: 150px;
-    border: 6px solid black;
-    border-radius: 8px;
-    background-color: gray;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-  }
-  
-  .circle {
-    width: 50px;
-    height: 50px;
-    border: 2px solid black;
-    border-radius: 50%;
-  }
-  
-  .red {
-    background-color: red;
-  }
-  
-  .yellow {
-    background-color: yellow;
-  }
-  
-  .green {
-    background-color: green;
-  }
-  #timerPanel {
-    position: absolute;
-    top: 35%;
-    left: 89%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80px;
-    height: 70px;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    border: 2px solid black;
-    background-color: #f2f2f2;
+  box-shadow: 0px;
+}
+
+.traffic-light-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 276px;
+  margin-top: 140px;
+}
+
+.traffic-light-panel2 {
+  position: absolute;
+  margin-top: 170px ;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.traffic-light-panel3 {
+  position: absolute;
+  margin-top: 170px ;
+  margin-left: 725px
+;
+transform: translateY(-50%);
+}
+
+.traffic-light-panel4 {
+position: absolute;
+top: 73%;
+margin-left: 725px;
+transform: translateY(-50%);
+}
+
+.traffic-light {
+width: 60px;
+height: 150px;
+border: 6px solid black;
+border-radius: 8px;
+background-color: gray;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: center;
+}
+
+.circle {
+width: 50px;
+height: 50px;
+border: 2px solid black;
+border-radius: 50%;
+}
+
+.red {
+background-color: red;
+}
+
+.yellow {
+background-color: yellow;
+}
+
+.green {
+background-color: green;
+}
+
+.timer1 {
+position: absolute;
+top: 65px;
+left: 265px;
+}
+
+.timer2 {
+position: absolute;
+top: 315px;
+left: 265px;
+}
+
+.timer3 {
+position: absolute;
+top: 315px;
+left: 715px;
+}
+
+.timer4 {
+position: absolute;
+top: 65px;
+left: 715px;
+}
+
+.timer-panel {
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 80px;
+height: 70px;
+font-size: 16px;
+font-weight: bold;
+text-align: center;
+border: 2px solid black;
+background-color: #f2f2f2;
 }
